[package]
name = "icu_locale_negotiation"
description = "API for negotiating Unicode Language and Locale Identifiers"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locale = { workspace = true }
icu_provider = { workspace = true }
icu_locale_data = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["compiled_data"]
compiled_data = [
    "dep:icu_locale_data",
    "icu_provider/baked",
    "icu_locale/compiled_data",
]

[[bench]]
name = "locale_negotiation"
harness = false
