[package]
name = "icu-pluralrules"
description = "Unicode Plural Rules categorizer for numeric input."
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-locale = { path = "../locale" }

[dev-dependencies]
criterion = "0.3"
cldr_pluralrules_parser = "2.0.0"

[[bench]]
name = "pluralrules"
harness = false
