[package]
name = "icu-pluralrules"
description = "Unicode Plural Rules categorizer for numeric input."
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-locale = { path = "../locale", features=["serde"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = {version = "1.0", optional = true }
bincode = { version = "1.2.1", optional = true }

[dev-dependencies]
criterion = "0.3"
cldr_pluralrules_parser = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }

[features]
default = []
json = ["serde", "serde_json"]
binary = ["serde", "serde_json", "bincode"]


[[bin]]
name = "generate_res"
required-features = ["binary"]

[[bench]]
name = "pluralrules"
harness = false
