[package]
name = "icu_simple_formatter"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
iai = "0.1"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "parser_iai"
harness = false
